# Pilgrim

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml  pylint_sonarqube.yml
src/: application.py  command.py  database.py  main.py
src/Application/: Application.py
src/Database/: Database.py
src/Models/TravelDiary/: TravelDiary.py
src/Pilgrim/: Application.py  Database.py  TravelDiary.py  __init__.py  command.py
src/Pilgrim/Models/: Entry.py  Photo.py
src/models/: entry.py  photo.py  photo_in_entry.py  travel_diary.py
src/pilgrim/: __init__.py  application.py  command.py  database.py
src/pilgrim/models/: entry.py  photo.py  photo_in_entry.py  travel_diary.py
src/pilgrim/service/: backup_service.py  entry_service.py  photo_service.py  servicemanager.py  travel_diary_service.py
src/pilgrim/service/mocks/: entry_service_mock.py  photo_service_mock.py  service_manager_mock.py  travel_diary_service_mock.py
src/pilgrim/ui/: ui.py
src/pilgrim/ui/screens/: about_screen.py  diary_list_screen.py  diary_settings_screen.py  edit_diary_modal.py  edit_entry_screen.py  new_diary_modal.py  rename_entry_modal.py
src/pilgrim/ui/screens/modals/: add_photo_modal.py  confirm_delete_modal.py  delete_all_entries_from_diary_modal.py  delete_all_photos_from_diary_modal.py  delete_diary_modal.py  delete_yes_confirmation_modal.py  edit_photo_modal.py  file_picker_modal.py
src/pilgrim/ui/screens/widgets/: photo_sidebar.py
src/pilgrim/ui/styles/: pilgrim.css
src/pilgrim/utils/: __init__.py  config_manager.py  directory_manager.py
src/service/: entry_service.py  photo_service.py  servicemanager.py  travel_diary_service.py
tests/: conftest.py  test_application.py  test_command.py  test_database.py
tests/service/: test_backup_service.py  test_entry_service.py  test_photo_service.py  test_service_manager.py  test_travel_diary_service.py
tests/utils/: test_config_manager.py  test_directory_manager.py
