[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Pilgrim"
version = "0.0.1"
authors = [
  { name="Gustavo Henrique Santos Souza de Miranda", email="gustavohssmiranda@gmail.com" }
]
description = "Pilgrim's Travel Log"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "sqlalchemy"
]

[template.plugins.default]
src-layout = true

[project.urls]
Homepage = "https://git.gustavomiranda.xyz/GHMiranda/Pilgrim"
Issues = "https://git.gustavomiranda.xyz/GHMiranda/Pilgrim"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
pilgrim = "pilgrim:main"
