[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pilgrim"
version = "0.0.5"
authors = [
  { name="Gustavo Henrique Santos Souza de Miranda", email="gustavohssmiranda@gmail.com" }
]
description = "Pilgrim's Travel Log"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sqlalchemy",
    "textual",
    "tomli",
    "tomli_w",
    "unidecode"
]

[project.urls]
Homepage = "https://github.com/gmbrax/Pilgrim/"
Issues = "https://github.com/gmbrax/Pilgrim/issues"

[project.scripts]
pilgrim = "pilgrim.command:main"